[package]
name = "photo-map"
version = "0.1.0"
authors = ["Pierre BAILLET <pierre.baillet@datadoghq.com>"]

[dependencies]

rexif = { path = "../rexif" }
rreverse = { path = "../rust-reverse-geocoder" }
ws = "0.7"
iron = "0.5.1"
staticfile = "*"
mount = "*"

[[bin]]

name = "server"
path = "src/server.rs"

[[bin]]

name = "cli"
path = "src/main.rs"
